images added in project 1

--- a/project-1.html
+++ b/project-1.html
@@ -65,7 +65,7 @@
     <div class="flex flex-col justify-center text-center h-screen px-4 lg:w-3/5 lg:m-auto lg:px-0">
         <div>
             <h1 class="text-3xl font-bold">Community Health Integrated Platform (CHIP) V2.0</h1>
-            <h2 class="text-lg text-gray-600 mt-4 italic">Streamlining Healthcare Operations at the Grassroots</h2>
+            <h2 class="text-lg text-gray-400 mt-4">Streamlining Healthcare Operations at the Grassroots.</h2>
             <!-- <svg
             class="absolute top-4 right-4 w-16 h-16 text-amber-400 opacity-70 z-0 animate-bounce"
             fill="none"
@@ -77,7 +77,7 @@
         </div>
         
         <div class="lg:w-4/5 mt-4 lg:mx-auto">
-            <img src="./images/chip/chip cover.png" alt="Descriptive alt text" class="w-full h-auto rounded-lg lg:rounded-4xl" />
+            <img src="./images/chip2/chip2.0_cover.png" alt="Descriptive alt text" class="w-full h-auto rounded-lg lg:rounded-4xl" />
         </div>
         <!-- <div class="lg:w-4/5 mt-4 lg:mx-auto">
             <p>Available on</p>
@@ -819,27 +819,27 @@
         </div>
 
         <!-- UI Designs - section wise -->
-        <div class="grid grid-cols-1 gap-8  lg:w-4/5 lg:m-auto lg:px-0">
+        <div class="grid grid-cols-1 gap-8 lg:w-4/5 lg:m-auto lg:px-0">
 
             <!-- Login & Registration (RBAC Enabled) -->
-            <div class="flex flex-col bg-gray-900 rounded-3xl p-6">
-                <div class="flex flex-col gap-4">
-                    <div class="flex flex-col gap-3">
+            <div class="flex flex-col bg-gray-900 rounded-xl lg:rounded-3xl p-3 lg:p-6">
+                <div class="flex flex-col gap-8">
+                    <div class="flex flex-col gap-2">
                         <h3 class="text-2xl font-semibold">Login & Registration (RBAC Enabled)</h3>
                         <p class="text-gray-400">A brief description of the project highlighting key features or design challenges solved in the process.</p>
                     </div>
 
                     <div class="flex flex-col gap-4 lg:flex-row items-center">
                       <!-- Left: Project Image -->
-                      <div class="w-1/2 w-full lg:order-1">
-                        <img src="./images/chip/chip cover.png" alt="Project screenshot" class="w-full h-auto object-cover rounded-xl lg:rounded-3xl"/>
+                        <div class="w-1/2 lg:w-3/5 w-full lg:order-1">
+                            <img src="./images/chip2/feature_1_1.png" alt="Project screenshot" class="w-full h-auto object-cover rounded-xl lg:rounded-3xl"/>
                         </div>
                 
                       <!-- Right: Text Content -->
-                        <div class="w-1/2 w-full flex flex-col gap-8 px-6 lg:order-2">
+                        <div class="w-1/2 lg:w-2/5 w-full flex flex-col gap-6 lg:gap-8 px-2 lg:px-6 lg:order-2">
 
                             <div>
-                                <p class="font-bold">Key Features:</p>
+                                <p class="font-medium text-xl">Key Features:</p>
                                 <ul class="list-disc list-inside text-gray-400 space-y-2 mt-4">
                                     <li>OTP-based login with RBAC (Role-Based Access Control)</li>
                                     <li>First-time registration flow with facility & geography linking</li>
@@ -850,7 +850,7 @@
                             <hr class="border-t-2 border-gray-700">
 
                             <div>
-                                <p class="font-bold">Benefits:</p>
+                                <p class="font-medium text-xl">Benefits:</p>
                                 <ul class="list-disc list-inside text-gray-400 space-y-2 mt-4">
                                     <li>Ensures secure and role-appropriate access</li>
                                     <li>Simplifies onboarding for digitally less-experienced users</li>
