--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
                     <!-- Left: Project Image -->
                     <div class="w-1/2 w-full lg:order-1">
                         <a href="https://example.com" target="_blank" rel="noopener noreferrer">
-                            <img src="./images/tarp/tarp_thumbnail.png" alt="Project screenshot" class="w-full h-auto object-cover rounded-xl lg:rounded-3xl"/>
+                            <img src="./images/chip2/chip2.0_thumbnail.png" alt="Project screenshot" class="w-full h-auto object-cover rounded-xl lg:rounded-3xl"/>
                         </a>
                     </div>
               
@@ -165,7 +165,7 @@
               
                     <!-- Right: Text Content -->
                     <div class="w-1/2 w-full flex flex-col gap-8 px-6 lg:order-1">
-                        <h3 class="text-2xl font-semibold">Login & Registration (RBAC Enabled)</h3>
+                        <h3 class="text-2xl font-semibold">Samasta Application</h3>
                         <p class="text-gray-400">A brief description of the project highlighting key features or design challenges solved in the process.</p>
                         <button class="bg-gray-800 text-white hover:text-amber-300 font-semibold py-4 px-8 rounded-full transition duration-500 ease-in-out inline-block w-max">View Details</button>
                     </div>
