icons introduced - svgrepo>dazzle lines

--- a/project-1.html
+++ b/project-1.html
@@ -120,7 +120,7 @@
         <!--  -->
         <div class="flex flex-col gap-8 lg:flex-row bg-gray-900 rounded-3xl p-6 mx-4">
             <div class="flex flex-col items-center w-full">
-                <img src="./images/chip/demo_svg.svg" alt="Logo" class="w-12 h-auto mb-4"/>
+                <img src="./images/chip2/icons/industry.svg" alt="Logo" class="w-12 h-auto mb-4"/>
                 <p class="text-gray-400 text-center lg:w-4/5">Industry</p>
                 <p class="font-bold text-center mt-2">Public Health Digitalisation</p>
             </div>
@@ -132,7 +132,7 @@
             </div>
 
             <div class="flex flex-col items-center w-full">
-                <img src="./images/chip/demo_svg.svg" alt="Logo" class="w-12 h-auto mb-4"/>
+                <img src="./images/chip2/icons/duration.svg" alt="Logo" class="w-12 h-auto mb-4"/>
                 <p class="text-gray-400 text-center lg:w-4/5">Duration</p>
                 <p class="font-bold text-center mt-2">Q3 2023</p>
             </div>
@@ -239,7 +239,7 @@
         <div class="grid grid-cols-1 gap-4">
             <!-- Context & Background -->
             <div class="flex flex-col bg-gray-900 rounded-3xl p-6">
-                <img src="./images/chip/demo_svg.svg" alt="Logo" class="w-12 h-auto mb-4"/>
+                <img src="./images/chip2/icons/context.svg" alt="Logo" class="w-12 h-auto"/>
                 <p class="text-xl font-bold mt-4">Context & Background</p>
                 <p class="text-gray-400 mt-4">CHIP is accessed by healthcare workers across a <b class="text-gray-200">three-tiered hierarchy:</b></p>
                 <ul class="list-disc list-inside text-gray-400 space-y-2 mt-4">
@@ -252,7 +252,7 @@
 
             <!-- User Needs & Business Goals -->
             <div class="flex flex-col bg-gray-900 rounded-3xl p-6">
-                <img src="./images/chip/demo_svg.svg" alt="Logo" class="w-12 h-auto mb-4"/>
+                <img src="./images/chip2/icons/business.svg" alt="Logo" class="w-12 h-auto"/>
                 <p class="text-xl font-bold mt-4">User Needs & Business Goals</p>
                 <ul class="list-disc list-inside text-gray-400 space-y-2 mt-4">
                     <li>Field users needed <b class="text-gray-200">streamlined workflows</b> tailored to their daily tasks.</li>
