--- a/index.html
+++ b/index.html
@@ -194,9 +194,10 @@
         <!-- Permute Solutions Pvt. Ltd. -->
         <div class="flex flex-col gap-6">
             <div class="flex flex-col gap-4">
-                <p class="text-xl underline underline-offset-4"> <a href="">Permute Solutions Pvt. Ltd.</a></p>
-                <p class="text-gray-400">Associate UI/UX Designer | Jan 23 - Present</p>
-                <p class="text-gray-400">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.</p>
+                <p class="text-xl underline underline-offset-4"> <a href="https://www.permutehq.com/">Permute Solutions Pvt. Ltd.</a></p>
+                <p class="text-gray-400">Associate UI/UX Designer | March 2022 - December 2022</p>
+                <p class="text-gray-400">As a UI/UX designer at Permute Solutions Pvt. Ltd., I focused on creating user-centered designs for a variety of digital platforms. My role involved translating client requirements into intuitive, aesthetically pleasing interfaces for web and mobile applications. I was responsible for designing user flows, wireframes, prototypes, and final high-fidelity designs that aligned with both business goals and user needs.</p>
+                <p class="text-gray-400">I worked closely with developers and project managers to ensure seamless integration of design elements and usability features, optimizing the overall user experience. My designs aimed to simplify complex processes and enhance the functionality of the software solutions we delivered, contributing to improved customer satisfaction and operational efficiency for our clients.</p>
             </div>
 
             <!-- Project"1 - CHIP 2.0 -->
