index hero fixed

--- a/index.html
+++ b/index.html
@@ -109,13 +109,12 @@
         <div class="text-center space-y-4">
             <div class="text-2xl lg:text-3xl font-serif text-gray-400 flex flex-wrap justify-center items-center gap-2">
                 <span>Hey, I'm</span>
-                <img src="./images/general/my-photo copy.jpg" alt="Profile" class="w-20 h-14 rounded-lg object-cover mx-4 border-4 border-amber-300 transition-all ease-in-out duration-500 hover:scale-125">
+                <img src="./images/general/my-photo copy.jpg" alt="Profile" class="w-16 h-16 rounded-full object-cover mx-3 border-2 border-amber-300 transition-all ease-in-out duration-500 hover:scale-125">
                 <span class="font-black text-gray-100">Sumit Nikhare</span>
             </div>
             <div class="text-xl lg:text-2xl font-serif flex flex-wrap justify-center items-center gap-2">
-                <span class="text-transparent bg-clip-text bg-gradient-to-r from-blue-400 via-purple-400 to-orange-400">a designer</span>
-                <span>at</span>
-                <img src="./images/general/kb_logo.png" alt="Gift Icon" class="w-auto h-fit mb-2 transition-all ease-in-out duration-500 hover:scale-105">
+                <span class="text-amber-300 font-serif font-bold">a designer <span class="text-gray-400 font-normal"> at</span></span>                  
+                <img src="./images/general/kb_logo.png" alt="Gift Icon" class="w-auto h-12 transition-all ease-in-out duration-500 hover:scale-105">
             </div>
             <div class="text-xl font-serif text-gray-400 flex flex-wrap justify-center items-center gap-2">
                 <span>based in</span>
@@ -285,21 +284,21 @@
                 </div>
             </div>
 
-            <!-- Project"2 - TARP Design System -->
+            <!-- Project"2 - UX Animation -->
             <div class="flex flex-col bg-gray-900 rounded-3xl p-3 lg:p-6 ">
                 <div class="flex flex-col gap-2 lg:flex-row items-center">
                     <!-- Left: Project Image -->
                     <div class="w-1/2 w-full lg:order-2">
-                        <a href="./tarp.html">
+                        <a href="./ux-animation.html">
                             <img src="./images/tarp/tarp_thumbnail.png" alt="Project screenshot" class="w-full h-auto object-cover rounded-xl lg:rounded-3xl"/>
                         </a>
                     </div>
               
                     <!-- Right: Text Content -->
                     <div class="w-1/2 w-full flex flex-col gap-3 lg:gap-8 lg:px-6 lg:order-1">
-                        <h3 class="text-2xl lg:text-3xl font-semibold">TARP Design System</h3>
-                        <p class="text-gray-400">TARP, providing a cohesive and scalable set of guidelines and components for building user interfaces. TARP ensures visual consistency, accessibility, and ease of development across various platforms. It includes a comprehensive library of typography, color schemes, icons, and reusable UI components, tailored for both mobile and web applications. Designed to streamline workflows, TARP empowers designers and developers to create intuitive, responsive, and high-performing digital products.</p>
-                        <a href="./tarp.html">
+                        <h3 class="text-2xl lg:text-3xl font-semibold">UX Animation</h3>
+                        <p class="text-gray-400">UX animation is the process of adding motion to UI elements in order to enhance a product's interactivity. UI animation also reduces the mechanical feel of a app or website, creating a much more natural and intuitive experience.</p>
+                        <a href="./ux-animation.html">
                             <button class="bg-gray-800 text-white hover:text-amber-300 font-semibold py-4 px-8 rounded-full transition duration-500 ease-in-out inline-block w-max">View Details</button>
                         </a>
                         
